@startuml social_network

hide circle
skinparam Linetype ortho
skinparam Ranksep 60
skinparam Nodesep 100

entity User {
    * id: <<uuid>>
    ---
    * userName: string
    * email: string
    * createdAt: timestamp
    ' never store passwords as plaintext!
    * hashedPassword: string
    * salt: string
    deletedAt: timestamp
    * avatar: URL
}

entity Post {
    * id: <<uuid>>
    ---
    * creatorId: <<FK>>
    * createdAt: timestamp
    * editedAt: timestamp
    deletedAt: timestamp
    * content: string
}

entity Comment {
    * id: <<uuid>>
    ---
    * postId: <<FK>>
    * commenterId: <<FK>>
    * createdAt: timestamp
    deletedAt: timestamp
    * content: string
}

entity PostEdit {
    * id: <<uuid>>
    ---
    * postId: <<FK>>
    * editedAt: timestamp
    * originalContent: string
}

entity Reaction {
    * id: <<uuid>>
    ---
    * postId: <<FK>>
    * userId: <<FK>>
    * reactionType: string
    * createdAt: timestamp
    deletedAt: timestamp
}

entity GroupMember {
    * id: <<uuid>>
    ---
    * userId: <<FK>>
    * conversationId: <<FK>>
}

entity Conversation {
    * id: <<uuid>>
    ---
    * title: string
}

entity Message {
    * id: <<uuid>>
    ---
    * fromUserId: <<FK>>
    * conversationId: <<FK>>
    * content: string
    * createdAt: timestamp
    deliveredAt: timestamp
    deletedAt: timestamp
}

User ||..o{ Post: creates
User ||..o{ Comment: comments
Post ||..o{ Comment
Post ||..o{ PostEdit
User ||..o{ Reaction: reacts
Post ||..o{ Reaction
User ||..o{ GroupMember: is
User ||..o{ Message: sends
GroupMember }o..|| Conversation
Conversation ||..o{ Message
Message }o..|| Message: replies

@enduml